sandbox-codebase/objects/aircall__Aircall_AI__c/aircall__Aircall_AI__c.object-meta.xml
<CustomObject>
    <label>Aircall Log</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Aircall Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aircall Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>