sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Account__c.field-meta.xml
<CustomField>
    <fullName>aircall__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Aircall_Voices1</relationshipName>
    <type>Lookup</type>
</CustomField>