sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__AI_Key_Topics__c.field-meta.xml
<CustomField>
    <fullName>aircall__AI_Key_Topics__c</fullName>
    <label>AI Key Topics</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>