sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Answered_by__c.field-meta.xml
<CustomField>
    <fullName>aircall__Answered_by__c</fullName>
    <label>Answered by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>