sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>aircall__Call_Recording__c</fullName>
    <label>Call Recording</label>
    <type>Url</type>
</CustomField>