sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Call_Resolution__c.field-meta.xml
<CustomField>
    <fullName>aircall__Call_Resolution__c</fullName>
    <label>Call Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Not Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>