sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Call_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>aircall__Call_Start_Date_Time__c</fullName>
    <label>Call Start Date/Time</label>
    <type>DateTime</type>
</CustomField>