sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Call_summary__c.field-meta.xml
<CustomField>
    <fullName>aircall__Call_summary__c</fullName>
    <label>AI summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>