sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Call_Type__c.field-meta.xml
<CustomField>
    <fullName>aircall__Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Virtual Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>