sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Call_uuid__c.field-meta.xml
<CustomField>
    <fullName>aircall__Call_uuid__c</fullName>
    <label>Call uuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>