sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__CallDisposition__c.field-meta.xml
<CustomField>
    <fullName>aircall__CallDisposition__c</fullName>
    <label>Call Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>