sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__CallDuration_Formatted__c.field-meta.xml
<CustomField>
    <fullName>aircall__CallDuration_Formatted__c</fullName>
    <formula>TEXT(FLOOR(aircall__CallDurationInSeconds__c / 60)) &amp; &quot;:&quot; &amp; IF(aircall__CallDurationInSeconds__c - (FLOOR(aircall__CallDurationInSeconds__c / 60) * 60) &lt; 10,&quot;0&quot;+TEXT(aircall__CallDurationInSeconds__c - (FLOOR(aircall__CallDurationInSeconds__c / 60) * 60)),TEXT(aircall__CallDurationInSeconds__c - (FLOOR(aircall__CallDurationInSeconds__c / 60) * 60)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Duration Formatted</label>
    <type>Text</type>
</CustomField>