sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__CallDurationInSeconds__c.field-meta.xml
<CustomField>
    <fullName>aircall__CallDurationInSeconds__c</fullName>
    <label>Call Duration</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>