sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Case__c.field-meta.xml
<CustomField>
    <fullName>aircall__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Aircall_Voices1</relationshipName>
    <type>Lookup</type>
</CustomField>