sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Connection_status__c.field-meta.xml
<CustomField>
    <fullName>aircall__Connection_status__c</fullName>
    <formula>IF( aircall__Has_Connected__c , &apos;Connected&apos;, &apos;Not connected&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connection status</label>
    <type>Text</type>
</CustomField>