sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Contact__c.field-meta.xml
<CustomField>
    <fullName>aircall__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Aircall_Voices1</relationshipName>
    <type>Lookup</type>
</CustomField>