sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Customer_Mood__c.field-meta.xml
<CustomField>
    <fullName>aircall__Customer_Mood__c</fullName>
    <label>AI Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEUTRAL</fullName>
            </value>
            <value>
                <fullName>POSITIVE</fullName>
            </value>
            <value>
                <fullName>NEGATIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>