sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Description__c.field-meta.xml
<CustomField>
    <fullName>aircall__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>