sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>aircall__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>