sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Has_Connected__c.field-meta.xml
<CustomField>
    <fullName>aircall__Has_Connected__c</fullName>
    <formula>IF( AND(OR(ISPICKVAL(aircall__Call_Type__c, &apos;Inbound&apos;),IF(ISPICKVAL(aircall__Call_Type__c, &apos;Outbound&apos;),IF(CONTAINS(LOWER(aircall__Subjects__c),&apos;un-answered&apos;),false,true ),false)),!aircall__Is_Missed_Call__c,! aircall__IsVoiceMail__c ) , true, false)</formula>
    <label>Has Connected</label>
    <type>Checkbox</type>
</CustomField>