sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Hour_in_timezone__c.field-meta.xml
<CustomField>
    <fullName>aircall__Hour_in_timezone__c</fullName>
    <label>Hour in timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>