sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Is_Missed_Call__c.field-meta.xml
<CustomField>
    <fullName>aircall__Is_Missed_Call__c</fullName>
    <formula>BEGINS(
LOWER(aircall__Subjects__c),
&apos;missed call&apos;
)</formula>
    <label>Is Missed Call</label>
    <type>Checkbox</type>
</CustomField>