sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Is_VA_Handled__c.field-meta.xml
<CustomField>
    <fullName>aircall__Is_VA_Handled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is VA Handled</label>
    <type>Checkbox</type>
</CustomField>