sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__IsVoiceMail__c.field-meta.xml
<CustomField>
    <fullName>aircall__IsVoiceMail__c</fullName>
    <formula>BEGINS(
LOWER(aircall__Subjects__c),
&apos;voicemail&apos;
)</formula>
    <label>Is VoiceMail</label>
    <type>Checkbox</type>
</CustomField>