sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__IVR_Options__c.field-meta.xml
<CustomField>
    <fullName>aircall__IVR_Options__c</fullName>
    <label>IVR Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>