sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__IVR_Time__c.field-meta.xml
<CustomField>
    <fullName>aircall__IVR_Time__c</fullName>
    <label>IVR Time</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>