sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Last_IVR_Branch__c.field-meta.xml
<CustomField>
    <fullName>aircall__Last_IVR_Branch__c</fullName>
    <label>Last IVR Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>