sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Last_IVR_Key__c.field-meta.xml
<CustomField>
    <fullName>aircall__Last_IVR_Key__c</fullName>
    <label>Last IVR Key</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>