sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Last_IVR_Title__c.field-meta.xml
<CustomField>
    <fullName>aircall__Last_IVR_Title__c</fullName>
    <label>Last IVR Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>