sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Lead__c.field-meta.xml
<CustomField>
    <fullName>aircall__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Aircall_Voices1</relationshipName>
    <type>Lookup</type>
</CustomField>