sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Missed_Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>aircall__Missed_Call_Reason__c</fullName>
    <label>Missed Call Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned in IVR</fullName>
            </value>
            <value>
                <fullName>Agents did not answer</fullName>
            </value>
            <value>
                <fullName>No available agent</fullName>
            </value>
            <value>
                <fullName>Out of opening hours</fullName>
            </value>
            <value>
                <fullName>Short abandoned</fullName>
            </value>
            <value>
                <fullName>Abandoned in Classic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>