sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Number_name__c.field-meta.xml
<CustomField>
    <fullName>aircall__Number_name__c</fullName>
    <label>Aircall Number Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>