sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>aircall__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Aircall_Voices1</relationshipName>
    <type>Lookup</type>
</CustomField>