sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Phone_number__c.field-meta.xml
<CustomField>
    <fullName>aircall__Phone_number__c</fullName>
    <label>Aircall number</label>
    <type>Phone</type>
</CustomField>