sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Playbook_Language__c.field-meta.xml
<CustomField>
    <fullName>aircall__Playbook_Language__c</fullName>
    <label>AI Playbook Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>