sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Playbook_Name__c.field-meta.xml
<CustomField>
    <fullName>aircall__Playbook_Name__c</fullName>
    <label>AI Playbook Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>