sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Playbook_Result_Topics__c.field-meta.xml
<CustomField>
    <fullName>aircall__Playbook_Result_Topics__c</fullName>
    <label>AI Playbook Result Topics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>