sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__SMS_Direction__c.field-meta.xml
<CustomField>
    <fullName>aircall__SMS_Direction__c</fullName>
    <label>Message Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>