sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__SMS_Sent_From__c.field-meta.xml
<CustomField>
    <fullName>aircall__SMS_Sent_From__c</fullName>
    <label>Message Sent From</label>
    <type>Phone</type>
</CustomField>