sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__SMS_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>aircall__SMS_Sent_To__c</fullName>
    <label>Message Sent To</label>
    <type>Phone</type>
</CustomField>