sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__SMS_Status__c.field-meta.xml
<CustomField>
    <fullName>aircall__SMS_Status__c</fullName>
    <label>Message Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>