sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Subjects__c.field-meta.xml
<CustomField>
    <fullName>aircall__Subjects__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>