sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Subtype__c.field-meta.xml
<CustomField>
    <fullName>aircall__Subtype__c</fullName>
    <label>Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>