sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Tag__c.field-meta.xml
<CustomField>
    <fullName>aircall__Tag__c</fullName>
    <label>Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>