sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Transferred_AircallLog__c.field-meta.xml
<CustomField>
    <fullName>aircall__Transferred_AircallLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferred To</label>
    <referenceTo>aircall__Aircall_AI__c</referenceTo>
    <relationshipLabel>Aircall Logs</relationshipLabel>
    <relationshipName>Aircall_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>