sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Transferred_By__c.field-meta.xml
<CustomField>
    <fullName>aircall__Transferred_By__c</fullName>
    <label>Transferred By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>