sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Transferred_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>aircall__Transferred_Date_Time__c</fullName>
    <label>Call Transfer Date/Time</label>
    <type>DateTime</type>
</CustomField>