sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__VA_calltranscript_summary__c.field-meta.xml
<CustomField>
    <fullName>aircall__VA_calltranscript_summary__c</fullName>
    <label>VA call’s transcript summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>