sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__VA_Handled_Call__c.field-meta.xml
<CustomField>
    <fullName>aircall__VA_Handled_Call__c</fullName>
    <label>VA Handled Call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>