sandbox-codebase/objects/aircall__Aircall_AI__c/fields/aircall__Waiting_Time__c.field-meta.xml
<CustomField>
    <fullName>aircall__Waiting_Time__c</fullName>
    <label>Waiting Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>