sandbox-codebase/objects/aircall__Aircall_AI__c/listViews/aircall__All.listView-meta.xml
<ListView>
    <fullName>aircall__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>